add github as npm registery

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "draft-js-utils-monorepo",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
   "private": true,
   "workspaces": [
     "packages/*"
